@startuml
' Diagramme de classes - Option A (catalogue Produit + Depense)
' Ce diagramme reflète la structure recommandée (Achat, Depense, LigneAchat, Produit, Statistique)

class Achat {
  +int id
  +String titreAchat
  +Date dateCreation
  +float total
  +modifierListe()
  +creerListe()
  +supprimerListe()
  +consulterTableauArticles()
}

class LigneAchat {
  +int id
  +int idAchat
  +int idProduit
  +String libelleProduit  'optionnel fallback
  +float prixUnitaire
  +int quantite
  +float calculMontant()
  +ajouterArticle()
  +modifierArticle()
  +supprimerArticle()
}

class Produit {
  +int id
  +String libelle
  +float prixUnitaire
  +String unite
  +ajouterProduit()
  +modifierProduit()
  +supprimerProduit()
}

class Depense {
  +int id
  +float totalDepense
  +String periode
  +Date dateDebut
  +Date dateFin
  +genererRapport()
  +choisirArticle()
  +afficherDetails()
  +filtrerEntreDeuxDates()
}

class Statistique {
  +String periode
  +Map<String,float> repartitionPourcentage
  +consultStatistique()
  +filtrerParPeriode()
  +afficherCamembert()
}

' Relations
Achat "1" -- "0..*" LigneAchat : contient
LigneAchat "*" --> "1" Produit : référence
Depense "0..1" o-- "1" Achat : agrège
Depense "1" ..> Statistique : dépend de

note right of LigneAchat
  Après migration, LigneAchat.idProduit référence Produit.id
  libelleProduit peut rester en fallback pendant migration
end note

@enduml
